Add configurable content layout modes
Implements #125